Adding Chesire movie tests.

--- a/cheshire-test/index.html
+++ b/cheshire-test/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="stylesheets/style.css">
         <script type="text/javascript">
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-3631048-6']);
@@ -25,8 +25,14 @@
         <h1><abbr title="Frames Per Second">FPS</abbr> Tests for GIF vs. CSS animation</h1>
 
         <ul>
-            <li><a href="gif.html">60+ frames animated GIF</a></li>
-            <li><a href="sprite.html">60+ frames in a sprite animated with CSS</a></li>
+            <li><a href="gif.html">74 frames at 20 <abbr title="Frames Per Second">FPS</abbr> animated GIF</a></li>
+            <li><a href="sprite.html">74 frames at 20 <abbr title="Frames Per Second">FPS</abbr> sprite animated with CSS</a></li>
+            <li><a href="gif-fast.html">74 frames at 50 <abbr title="Frames Per Second">FPS</abbr> animated GIF</a></li>
+            <li><a href="sprite-fast.html">74 frames 50 <abbr title="Frames Per Second">FPS</abbr> in a sprite animated with CSS</a></li>
+            <li><a href="gif-filters.html">74 frames at 50 <abbr title="Frames Per Second">FPS</abbr> CSS-filtered animated GIF</a></li>
+            <li><a href="sprite-filters.html">74 frames 50 <abbr title="Frames Per Second">FPS</abbr> in a CSS-filtered sprite animated with CSS</a></li>
+            <li><a href="gif-final-comp.html">74 frames at 20 <abbr title="Frames Per Second">FPS</abbr> CSS-filtered animated GIF</a></li>
+            <li><a href="sprite-final-comp.html">74 frames 20 <abbr title="Frames Per Second">FPS</abbr> in a CSS-filtered sprite animated with CSS</a></li>
         </ul>
 
     </body>
