--- a/cheshire-test/sprite-final-comp.html
+++ b/cheshire-test/sprite-final-comp.html
@@ -22,8 +22,8 @@
         </script>
     </head>
     <body>
-        <h1><abbr title="Frames Per Second">FPS</abbr> Test: CSS Animated Sprite Sheet</h1>
+        <h1>20 <abbr title="Frames Per Second">FPS</abbr> with CSS Filters Test: CSS Animated Sprite Sheet</h1>
 
-        <div class="movie"></div>
+        <div class="movie filtered"></div>
     </body>
 </html>
