--- a/cheshire-test/gif-fast.html
+++ b/cheshire-test/gif-fast.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Alice in Videoland: FPS Test on Animated Sprites</title>
+        <title>Alice in Videoland: FPS Test on Animated GIFs</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -22,8 +22,8 @@
         </script>
     </head>
     <body>
-        <h1><abbr title="Frames Per Second">FPS</abbr> Test: CSS Animated Sprite Sheet</h1>
+        <h1>50 <abbr title="Frames Per Second">FPS</abbr> Test: Animated GIF, Fast</h1>
 
-        <div class="movie"></div>
+        <img src="images/cheshire-fast.gif" />
     </body>
 </html>
