--- a/cheshire-test/gif.html
+++ b/cheshire-test/gif.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Alice in Videoland: the Interactive Storybook</title>
+        <title>Alice in Videoland: FPS Test on Animated GIFs</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="stylesheets/style.css">
         <script type="text/javascript">
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-3631048-6']);
@@ -22,7 +22,7 @@
         </script>
     </head>
     <body>
-        <h1><abbr title="Frames Per Second">FPS</abbr> Test Animated GIF</h1>
+        <h1><abbr title="Frames Per Second">FPS</abbr> Test: Animated GIF</h1>
 
         <img src="images/cheshire.gif" />
     </body>
