Adds proper hiding of tunnel scene until user taps/clicks the hole's link.

--- a/book/index.html
+++ b/book/index.html
@@ -36,21 +36,21 @@
             <!-- <p>Please wait while we load</p> TODO: add w/ JS-->
         </div>
 
-        <div class="scene-park">
+        <div class="scene scene-park">
             <div class="page page_sitting-in-the-park">
-                <p class="narration">Alice was beginning to get very bored, sitting by her sister in the park.</p>
+                <p class="caption narration">Alice was beginning to get very bored, sitting by her sister in the park.</p>
             </div>
 
             <div class="page page_alice-is-bored">
                 <p>Her sister was deeply engrossed in a technical book about web development.</p>
-                <p>&ldquo;<span class="dialog dialog_thought">How can she read a book with no pictures or dialog in it?</span> Alice wondered to herself.</p>
+                <p class="caption">&ldquo;<span class="dialog dialog_thought">How can she read a book with no pictures or dialog in it?</span>&rdquo; Alice wondered to herself.</p>
             </div>
 
             <div class="page page_rabbit-appears">
                 <p>She was just about to nod off when suddenly a white rabbit wearing a vintage tweed porkpie hat dashed by&hellip; looking anxiously at his smartphone!</p>
                 <p>The phone chimed at him.</p>
                 <audio src="sound/iphone_alert.mp3"></audio>
-                <p>&ldquo;<span class="dialog dialog_exclamation">I know! I know! I’m late!</span>&rdquo; squeaked the rabbit, more out of annoyance than concern.</p>
+                <p class="caption">&ldquo;<span class="dialog dialog_exclamation">I know! I know! I’m late!</span>&rdquo; squeaked the rabbit, more out of annoyance than concern.</p>
             </div>
 
             <div class="page page_rabbit-chase">
@@ -59,10 +59,11 @@
 
             <div class="page page_the-hole">
                 <p>She was just in time to see him pop down a hole between a great tree's roots.</p>
+                <a href="#tunnels" id="to-tunnels">Follow the rabbit?</a>
             </div>
         </div>
         
-        <div class="scene-hole">
+        <div class="scene scene-hole" id="tunnels">
             <div class="page page_tunnels">
                 <p>In another moment down went Alice after him without a thought as to how she’d get out again. She plummeted head over heels into what must have been an old, capped well.</p>
             </div>
@@ -77,11 +78,11 @@
             </div>
         </div>
 
-        <div class="scene-cut">
+        <div class="scene scene-cut">
             <p>But before she could answer, her fall came to an end with a startling thump.</p>
         </div>
 
-        <div class="scene-wonderland">
+        <div class="scene scene-wonderland">
             <div class="page page_crash-landing">
                 <p>She tumbled out onto a heap of sticks and leaves at the end of a long passage. And there, scampering to the other end, went the White Rabbit in his porkpie hat.</p>
             </div>
