Adding pretty background images and sprites.

--- a/book/index.html
+++ b/book/index.html
@@ -42,6 +42,7 @@
             </div>
 
             <div class="page page_alice-is-bored">
+                <div class="eyes"></div>
                 <p>Her sister was deeply engrossed in a technical book about web development.</p>
                 <p class="caption">&ldquo;<span class="dialog dialog_thought">How can she read a book with no pictures or dialog in it?</span>&rdquo; Alice wondered to herself.</p>
             </div>
