Progress for the weekend: need to finish interactions and final bg on park scenes. And also, dammit, animation-studio is NOT working. At all.

--- a/book/index.html
+++ b/book/index.html
@@ -48,6 +48,8 @@
             </div>
 
             <div class="page page_rabbit-appears">
+                <div class="blink"></div>
+                <div class="rabbit"></div>
                 <p>She was just about to nod off when suddenly a white rabbit wearing a vintage tweed porkpie hat dashed by&hellip; looking anxiously at his smartphone!</p>
                 <p>The phone chimed at him.</p>
                 <audio id="rabbit-phone" volume="0.1" src="sound/iphone_alert.mp3"></audio>
