Gets rabbit to pop down the hole.

--- a/book/index.html
+++ b/book/index.html
@@ -61,6 +61,8 @@
             </div>
 
             <div class="page page_the-hole">
+                <div class="foreground"></div>
+                <div class="rabbit"></div>
                 <p>She was just in time to see him pop down a hole between a great tree's roots.</p>
                 <a href="#tunnels" id="to-tunnels">Follow the rabbit?</a>
             </div>
