Switch over from inview.js to waypoints. Adding a function that guesses what you're reading.

--- a/book/index.html
+++ b/book/index.html
@@ -134,7 +134,7 @@
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/jquery.inview.js"></script>
+        <script src="js/jquery.waypoints.min.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
