Removing the 'scrolled-past' class functionality. Everything is fired once and inview forever.

--- a/book/index.html
+++ b/book/index.html
@@ -80,9 +80,9 @@
             </div>
             <div id="tunnel">
                 <div class="alice-falling"></div>
+                <div id="skrollr-body">
                 <div class="cheshire-cat"></div>
                 <div class="page page_falling falling_frightened" data-mood="frightened">
-                    <!-- Need 9 animation kicks -->
                     <p>Either the well was very deep or she fell very slowly, for she had plenty of time to look about her on the way down.</p>
                 </div>
                 <div class="page page_falling falling_curious" data-mood="curious">
@@ -97,7 +97,6 @@
                 <div class="page page_falling falling_waking" data-mood="waking">
                     <p>Poor Tuna! Would they remember to clean his litter box or give him his kibble? If only Tuna were with her now. There were no mice to live on in the air, but perhaps he could catch a bat. </p>
                 </div>
-                    <!-- *sleep and Tuna* -->
 
                     <!-- Wait 3 seconds or so for the video to end. Then return to the scene -->
                 <div class="page page_falling falling_weird" data-mood="weird">
@@ -111,11 +110,12 @@
                 <div class="page page_falling falling_cat-out" data-mood="jolted">
                     <p>&ldquo;Oh yes, cats eat bats all the time. You wouldn’t happen to be a bat, now would you?&rdquo;</p>
                 </div>
-                <div class="tunnel_bg_wrapper">
+<!--                 <div class="tunnel_bg_wrapper">
                     <div class="tunnel_bg tunnel_bg1"></div>
                     <div class="tunnel_bg tunnel_bg2"></div>
                     <div class="tunnel_bg tunnel_bg3"></div>
-                </div>
+                </div> -->
+            </div>
             </div><!--/#tunnel-->
         </div>
 
