Scrolling only on desktop.

--- a/book/index.html
+++ b/book/index.html
@@ -75,14 +75,12 @@
         </div>
         
         <div class="scene scene-hole" id="tunnels">
-            <div class="page page_tunnels">
-                <p>In another moment down went Alice after him without a thought as to how she’d get out again. She plummeted head over heels into what must have been an old, capped well.</p>
-            </div>
             <div id="tunnel">
                 <div class="alice-falling"></div>
                 <div id="skrollr-body">
                 <div class="cheshire-cat"></div>
                 <div class="page page_falling falling_frightened" data-mood="frightened">
+                    <p>In another moment down went Alice after him without a thought as to how she’d get out again. She plummeted head over heels into what must have been an old, capped well.</p>
                     <p>Either the well was very deep or she fell very slowly, for she had plenty of time to look about her on the way down.</p>
                 </div>
                 <div class="page page_falling falling_curious" data-mood="curious">
@@ -135,6 +133,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/jquery.waypoints.min.js"></script>
+        <script src="js/jquery.waypoints-sticky.min.js"></script>
         <script type="text/javascript" src="js/skrollr.min.js"></script>
         <script src="js/script.js"></script>
     </body>
