Removed prefix free.

--- a/book/skrollr-test/index.html
+++ b/book/skrollr-test/index.html
@@ -58,7 +58,8 @@ table {
 #tunnel {
   position: relative;
   top: 0; left: 0;
-  background: #6c373f;
+  background: url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-border-left.svg?1) 0 0 repeat-y, url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-border-right.svg?1) 100% 0 repeat-y, url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-furniture-comp900.svg) top center repeat-y, url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-specks.png), #6c373f;
+  background-size: 20px 150px,  20px 150px,  80% auto, auto auto;
 }
 
 .page {
@@ -66,12 +67,13 @@ table {
   padding-top: 75%;
   /* Hide the text */
   text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .alice-falling {
-  background-color: red;
+  background-image: url('http://stash.rachelnabors.com/codepen/alice/alice-fall-saebaba4ad9.png');
+  background-size: 100% auto;
   width: 31.25%;
   padding-top: 48.73047%;
   top: -10%;
@@ -79,6 +81,45 @@ table {
   margin-left: -15.625%;
   position: fixed;
   z-index: 20;
+}
+
+.curious .alice-falling {
+  background-position: 0 20%;
+}
+
+.bored .alice-falling {
+  background-position: 0 80%;
+}
+
+.sleeping .alice-falling {
+  background-position: 0 60%;
+}
+
+.waking .alice-falling {
+  background-position: 0 100%;
+}
+
+.weird .alice-falling {
+  background-position: 0 0;
+}
+
+.jolted .alice-falling {
+  background-position: 0 40%;
+}
+
+@keyframes freak-out {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 0 200%;
+  }
+}
+
+.frightened .alice-falling {
+  animation: freak-out 1.5s steps(2) infinite;
+  background: url('http://stash.rachelnabors.com/codepen/alice/alice-frightened-s41f9b8ddd1.png') 0 0 no-repeat;
+  background-size: 100% auto;
 }
 </style>
 
