Improvingthe tunnel experience: better SVG and turning off borked skrollr mobile experience.

--- a/book/index.html
+++ b/book/index.html
@@ -75,7 +75,11 @@
         </div>
         
         <div class="scene scene-hole" id="tunnels">
+            <div class="page page_tunnels">
+                <p>In another moment down went Alice after him without a thought as to how she’d get out again. She plummeted head over heels into what must have been an old, capped well.</p>
+            </div>
             <div id="tunnel">
+
                 <div class="alice-falling"></div>
                 <div id="skrollr-body">
                 <div class="cheshire-cat"></div>
