Adding ending credits

--- a/book/index.html
+++ b/book/index.html
@@ -9,7 +9,7 @@
         
         <script type="text/javascript" src="//use.typekit.net/pxo8qyc.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-        
+
         <link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> 
 
         <script type="text/javascript">
@@ -38,7 +38,6 @@
             <h2 class="byline">A retelling of Lewis Carroll's classic in pixels and HTML by Rachel &ldquo;the Great&rdquo; Nabors</h2>
             <!-- <p>Please wait while we load</p> TODO: add w/ JS-->
         </div>
-
         <div class="scene scene-park">
             <div class="page page_sitting-in-the-park">
                 <p class="caption narration">Alice was beginning to get very bored, sitting by her sister in the park.</p>
@@ -130,9 +129,21 @@
                 <p>She tumbled out onto a heap of sticks and leaves at the end of a long passage. And there, scampering to the other end, went the White Rabbit in his porkpie hat.</p>
             </div>
             <div class="page page_credits">
-                <p>End of story: JavaScript book and Alice in Wonderland book links. &ldquo;Genius occurs when two disparate fields overlap. Dive into a good book today.&rdquo;</p>
+                <div class="alice"></div>
+                <div class="rabbit"></div>
+                <section class="continued">
+                    <h2>To be continued&hellip;</h2>
+                    <!-- <blockquote>&ldquo;Genius occurs when two disparate fields overlap.&rdquo;</blockquote> -->
+                    <ul>
+                        <li><a href="http://www.gutenberg.org/ebooks/11">Read Alice in Wonderland at Project Gutenberg</a></li>
+                        <li><a href="http://artsy.net/gene/impressionism">Explore Impressionism at Artsy</a></li>
+                        <li><a href="http://www.codecademy.com/tracks/web">Learn <abbr title="Hypertext Markup Language">HTML</abbr>, <abbr title="Cascading Style Sheets">CSS</abbr> and JavaScript at Code Academy</a></li>
+                    </ul>
+                    <p>For more adventures in digital storytelling, <a href="http://rachelnabors.com">follow Rachel Nabors</a></p>
+                </section>
             </div>
         </div>
+
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
