--- a/book/index.html
+++ b/book/index.html
@@ -32,11 +32,11 @@
 
         </script>
     </head>
-    <body>
-        <div class="loading">
+    <body class="loading">
+        
+        <div class="loading-card">
             <h1>Alice in Videoland</h1>
-            <h2 class="byline">A retelling of Lewis Carroll's classic in pixels and HTML by Rachel &ldquo;the Great&rdquo; Nabors</h2>
-            <!-- <p>Please wait while we load</p> TODO: add w/ JS-->
+            <h2 class="byline">A retelling of Lewis Carroll's classic in pixels and HTML by <a href="http://rachelnabors.com">Rachel Nabors</a></h2>
         </div>
         <div class="scene scene-park">
             <div class="page page_sitting-in-the-park">
