Getting attitude changes to work on ipad w/ hammer js.

--- a/book/index.html
+++ b/book/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js loading">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Alice in Videoland: the Interactive Storybook</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-        
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">        
         <script type="text/javascript" src="//use.typekit.net/pxo8qyc.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
@@ -32,7 +31,7 @@
 
         </script>
     </head>
-    <body class="loading">
+    <body>
         
         <div class="loading-card">
             <h1>Alice in Videoland</h1>
@@ -149,6 +148,7 @@
         <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/jquery.waypoints.min.js"></script>
         <script src="js/jquery.waypoints-sticky.min.js"></script>
+        <script src="js/jquery.hammer.min.js"></script>
         <script type="text/javascript" src="js/skrollr.min.js"></script>
         <script src="js/script.js"></script>
     </body>
