tidying up the JS

--- a/book/index.html
+++ b/book/index.html
@@ -94,6 +94,10 @@
                 <div class="page page_falling falling_sleeping" data-mood="sleeping">
                     <p>How would she call her sister? What if she didn’t speak the language? What if they couldn’t understand her and put her in an orphanage? She’d never see her sister or her cat again!</p>
                     <p>Poor Tuna! Would they remember to clean his litter box or give him his kibble? If only Tuna were with her now. There were no mice to live on in the air, but perhaps he could catch a bat. </p>
+                </div>
+
+                    <!-- Wait 3 seconds or so for the video to end. Then return to the scene -->
+                <div class="page page_falling falling_weird" data-mood="sleeping">
                     <p>Before she could worry too much, her eyes grew heavy and she began to nod off whispering, “Do cats eat bats?” to no one in particular.</p>
                     <p>She must’ve been dreaming, because for a moment she imagined he was there with her, as large as her sister.</p>
                     <p>&ldquo;Oh yes, cats eat bats all the time. You wouldn’t happen to be a bat, now would you?&rdquo;</p>
