tidying up the JS

--- a/book/index.html
+++ b/book/index.html
@@ -136,7 +136,7 @@
         <script src="js/jquery.waypoints.min.js"></script>
         <script src="js/jquery.waypoints-sticky.min.js"></script>
         <script src="js/jquery.hammer.min.js"></script>
-        <script type="text/javascript" src="js/skrollr.min.js"></script>
+        <script src="js/skrollr.min.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
