--- a/book/index.html
+++ b/book/index.html
@@ -3,22 +3,21 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
         <title>Alice in Videoland: the Interactive Storybook</title>
+
         <meta name="description" content="">
+
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">        
+
+        <script src="js/modernizr.min.js"></script>
         <script type="text/javascript" src="//use.typekit.net/pxo8qyc.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
         <link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> 
 
         <script type="text/javascript">
-            /* Mordernizr to check for CSS animations and transitions */
-            /* Modernizr 2.6.2 (Custom Build) | MIT & BSD
-             * Build: http://modernizr.com/download/#-cssanimations-csstransitions-cssclasses-testprop-testallprops-domprefixes
-             */
-            ;window.Modernizr=function(a,b,c){function x(a){j.cssText=a}function y(a,b){return x(prefixes.join(a+";")+(b||""))}function z(a,b){return typeof a===b}function A(a,b){return!!~(""+a).indexOf(b)}function B(a,b){for(var d in a){var e=a[d];if(!A(e,"-")&&j[e]!==c)return b=="pfx"?e:!0}return!1}function C(a,b,d){for(var e in a){var f=b[a[e]];if(f!==c)return d===!1?a[e]:z(f,"function")?f.bind(d||b):f}return!1}function D(a,b,c){var d=a.charAt(0).toUpperCase()+a.slice(1),e=(a+" "+n.join(d+" ")+d).split(" ");return z(b,"string")||z(b,"undefined")?B(e,b):(e=(a+" "+o.join(d+" ")+d).split(" "),C(e,b,c))}var d="2.6.2",e={},f=!0,g=b.documentElement,h="modernizr",i=b.createElement(h),j=i.style,k,l={}.toString,m="Webkit Moz O ms",n=m.split(" "),o=m.toLowerCase().split(" "),p={},q={},r={},s=[],t=s.slice,u,v={}.hasOwnProperty,w;!z(v,"undefined")&&!z(v.call,"undefined")?w=function(a,b){return v.call(a,b)}:w=function(a,b){return b in a&&z(a.constructor.prototype[b],"undefined")},Function.prototype.bind||(Function.prototype.bind=function(b){var c=this;if(typeof c!="function")throw new TypeError;var d=t.call(arguments,1),e=function(){if(this instanceof e){var a=function(){};a.prototype=c.prototype;var f=new a,g=c.apply(f,d.concat(t.call(arguments)));return Object(g)===g?g:f}return c.apply(b,d.concat(t.call(arguments)))};return e}),p.cssanimations=function(){return D("animationName")},p.csstransitions=function(){return D("transition")};for(var E in p)w(p,E)&&(u=E.toLowerCase(),e[u]=p[E](),s.push((e[u]?"":"no-")+u));return e.addTest=function(a,b){if(typeof a=="object")for(var d in a)w(a,d)&&e.addTest(d,a[d]);else{a=a.toLowerCase();if(e[a]!==c)return e;b=typeof b=="function"?b():b,typeof f!="undefined"&&f&&(g.className+=" "+(b?"":"no-")+a),e[a]=b}return e},x(""),i=k=null,e._version=d,e._domPrefixes=o,e._cssomPrefixes=n,e.testProp=function(a){return B([a])},e.testAllProps=D,g.className=g.className.replace(/(^|\s)no-js(\s|$)/,"$1$2")+(f?" js "+s.join(" "):""),e}(this,this.document);
-
-            // + analytics
+            // analytics
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-3631048-6']);
             _gaq.push(['_trackPageview']);
@@ -133,9 +132,16 @@
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
+        <script>
+            Modernizr.load([
+                {
+                  test: Modernizr.touch,
+                  yep : 'js/jquery.hammer.min.js'
+                }
+            ]);
+        </script>
         <script src="js/jquery.waypoints.min.js"></script>
         <script src="js/jquery.waypoints-sticky.min.js"></script>
-        <script src="js/jquery.hammer.min.js"></script>
         <script src="js/skrollr.min.js"></script>
         <script src="js/script.js"></script>
     </body>
