Banging out some of the quirkier behavior on swiping. Meant I had to add some global-esque variables in the touch case to maintain the current, previous and next pages. Brutal.

--- a/book/index.html
+++ b/book/index.html
@@ -149,7 +149,7 @@
             Modernizr.load([
                 {
                     test: Modernizr.touch,
-                    yep : 'js/jquery.hammer.min.js'
+                    yep : ['js/jquery.hammer.min.js', 'js/jquery.visible.min.js']
                 }
             ]);
         </script>
