Prettifying the title slide for the talk.

--- a/talk/index.html
+++ b/talk/index.html
@@ -38,8 +38,9 @@
 <section class="slide slide_preso-title">
   <div class="talk-title">
     <h1>Alice in Videoland</h1>
-    <h2>Building an interactive storybook in HTML5</h2>
-    <p class="author">with Rachel Nabors/<a href="http://rachelnabors.com">RachelNabors.com</a>/<a href="http://twitter.com/rachelnabors" target="_blank">@RachelNabors</a></p>
+    <p class="tagline">Building an interactive storybook in HTML5</p>
+    <p class="author">with Rachel Nabors<br><a href="http://rachelnabors.com">RachelNabors.com</a><br><a href="http://twitter.com/rachelnabors" target="_blank">@RachelNabors</a></p>
+    <img src="img/p_alice.png" alt=" ">
   </div>
 </section>
 
