--- a/talk/index.html
+++ b/talk/index.html
@@ -590,21 +590,25 @@ var cutToWonderland = function() {
   </div>
 </div>
 
-<section class="slide slide_goodbye">
-  <h2 class="">Enjoy the conference!</h2>
-  <div class="slide">
-    <p>These slides: <a href="http://share.rachelnabors.com/cssdevconf2013">share.RachelNabors.com/cssdevconf2013</a></p>
-    <p>Alice's source code: <a href="https://github.com/rachelnabors/alice-in-videoland">github.com/rachelnabors/alice-in-videoland</a></p>
-    <p><strong>Hire me</strong> to make wonderful things or make your things more wonderful.</p>
-    <p><strong>Show me</strong> the wonderful things you are going to make.</p>
-    <p><strong>Find me</strong> in all the usual places:</p>
-    <ul>
-      <li><a href="https://twitter.com/rachelnabors">@rachelnabors</a></li>
-      <li><a href="http://rachelnabors.com">rachelnabors.com</a></li>
-      <li><a href="https://github.com/rachelnabors">github.com/rachelnabors</a></li>
-      <li><a href="http://codepen.io/rachelnabors">codepen.io/rachelnabors</a></li>
-    </ul>
+<section class="slide slide_texty" id="slide_goodbye">
+  <h2 class="texty-title">To the Drink and Draw!</h2>
+  <div class="text-content">
+    <div class="slide">
+      <p>These slides: <a href="http://share.rachelnabors.com/cssdevconf2013">share.RachelNabors.com/cssdevconf2013</a></p>
+      <p>Alice's source code: <a href="https://github.com/rachelnabors/alice-in-videoland">github.com/rachelnabors/alice-in-videoland</a></p>
+    </div>
+    <div class="slide">
+      <p><strong>Hire me</strong> to make wonderful things</p>
+      <p><strong>Show me</strong> the wonderful things you are going to make</p>
+      <p><strong>Find me</strong> in all the usual places:</p>
+      <ul>
+        <li><a href="https://twitter.com/rachelnabors">@rachelnabors</a></li>
+        <li><a href="http://rachelnabors.com">rachelnabors.com</a></li>
+        <li><a href="https://github.com/rachelnabors">github.com/rachelnabors</a></li>
+      </ul>
+    </div>
   </div>
+  <span class="img-wrap"><img src="../book/img/p_selfie.png"></span>
 </section>
 
 <!-- Begin extension snippets. Add or remove as needed. -->
