adding videos to demo skrollr's touch issues.

--- a/talk/index.html
+++ b/talk/index.html
@@ -522,14 +522,13 @@ $("#to-tunnels").activate(downTheHole);
 <div class="slide slide_texty" id="touch_parallax">
   <h2 class="texty-title">The Perils of Parallax</h2>
   <div class="texty-body">
-    <p><strong>Danger!</strong> In iOS Safari, all animation and JavaScript pauses while you touch the screen.</p>
+    <p><strong>Danger!</strong> In iOS Safari, <a href="http://www.youtube.com/watch?v=ELJrG7RTc6c" target="_blank">all animation and JavaScript pauses</a> while you touch the screen.</p>
     <p class="slide">This leads to an intesting puzzle:</p>
     <ul>
       <li class="slide">Waypoints ties with scroll events</li>
       <li class="slide">The &ldquo;mobile friendly&rdquo; skrollr circumvents scroll by animating the CSS transformed page.</li>
     </ul>
-    <p class="slide">So you can't change Alice's mood <em>or</em> you can't see her mood changing. (Demo! TODO)</p>
-
+    <p class="slide">So you can't change Alice's mood <em>or</em> you <a href="http://www.youtube.com/watch?v=TuQGIyKkLjA" target="_blank">can't see her mood changing</a>.</p>
   </div>
 </div>
 
