Adding some goal and intro pages.

--- a/talk/index.html
+++ b/talk/index.html
@@ -51,11 +51,48 @@
   </figure>
 </section>
 
-<section class="slide slide_cover" id="cover_updating">
+<section class="slide slide_cover" id="cover_project">
   <div class="vcenter title-card">
-    <h1 class="section-title">Updating Alice</h1>
+    <h1 class="section-title">The Project</h1>
   </div>
 </section>
+
+<div class="slide slide_texty" id="project_quest">
+  <h2 class="texty-title">The Quest</h2>
+  <div class="texty-body">
+    <ul>
+      <li class="slide">Writing for <a href="http://www.adobe.com/inspire.html" target="_blank">Adobe's Inspire zine</a> (coming out this December!)</li>
+      <li class="slide"><strong>Inspire</strong> Adobe's creative community to make things with HTML and CSS</li>
+    </ul>
+  </div>
+</div>
+
+<div class="slide slide_texty" id="project_future">
+  <h2 class="texty-title">For the Future</h2>
+  <div class="texty-body">
+    <p>These techniques could lead to building more awesome:</p>
+    <ul>
+      <li class="slide">Web apps (for marketplaces!)</li>
+      <li class="slide">Interactions</li>
+      <li class="slide">Designers</li>
+    </ul>
+  </div>
+</div>
+
+<div class="slide slide_texty" id="project_learn">
+  <h2 class="texty-title">What' you'll learn</h2>
+  <div class="texty-body">
+    <ul>
+      <li class="slide">Retina and images</li>
+      <li class="slide">Handling a shifting environment with <abbr title="Responsive Web Design">RWD</abbr> and modernizr</li>
+      <li class="slide">Loading assets</li>
+      <li class="slide">Performance</li>
+      <li class="slide">Parallax</li>
+      <li class="slide">Reconciling touch with click</li>
+      <li class="slide">Crafting a kick-ass story in HTML and CSS!!</li>      
+    </ul>
+  </div>
+</div>
 
 <div class="slide slide_topical" id="original-alice">
   <div class="vbottom">
