Updating drink and draw time

--- a/talk/index.html
+++ b/talk/index.html
@@ -622,7 +622,7 @@ var cutToWonderland = function() {
 </div>
 
 <section class="slide slide_texty" id="slide_goodbye">
-  <h2 class="texty-title">To the Drink and Draw!</h2>
+  <h2 class="texty-title">See you at the Drink and Draw!</h2>
   <div class="text-content">
     <div class="slide">
       <p>These slides: <a href="http://share.rachelnabors.com/cssdevconf2013" target="_blank">share.RachelNabors.com/cssdevconf2013</a></p>
