updating slides for second CSS Dev Conf run :D

--- a/talk/index.html
+++ b/talk/index.html
@@ -94,6 +94,12 @@
   </div>
 </div>
 
+<section class="slide slide_cover" id="cover_updating">
+  <div class="vcenter title-card">
+    <h1 class="section-title">Updating Alice</h1>
+  </div>
+</section>
+
 <div class="slide slide_topical" id="original-alice">
   <div class="vbottom">
     <p class="slide-tagline">This isn't Alice. <small>Illustration by John Tenniel</small></p>
@@ -133,15 +139,9 @@
   </div>
 </div>
 
-<div class="slide slide_topical" id="setting-park">
+<div class="slide slide_topical" id="chara-alice">
   <div class="vtop">
-    <p class="slide-tagline">The Park</p>
-  </div>
-</div>
-
-<div class="slide slide_topical" id="setting-hole">
-  <div class="vtop">
-    <p class="slide-tagline">The Hole</p>
+    <p class="slide-tagline">Our Alice, just a curious little girl</p>
   </div>
 </div>
 
@@ -157,9 +157,15 @@
   </div>
 </div>
 
-<div class="slide slide_topical" id="chara-alice">
+<div class="slide slide_topical" id="setting-park">
   <div class="vtop">
-    <p class="slide-tagline">Alice, just a curious little girl</p>
+    <p class="slide-tagline">The Park</p>
+  </div>
+</div>
+
+<div class="slide slide_topical" id="setting-hole">
+  <div class="vtop">
+    <p class="slide-tagline">The Hole</p>
   </div>
 </div>
 
@@ -194,6 +200,7 @@
   <h2 class="texty-title">Constraints</h2>
   <div class="texty-body">
     <ul>
+      <li class="slide"><strong>Tell a small piece of the story well.</strong><br>No time for telling the whole thing.</li>
       <li class="slide"><strong>Must work on Chrome and iPad Retina.</strong><br>Favor speed and pageweight over compatibility</li>
       <li class="slide"><strong>Interaction must be fairly one-to-one.</strong><br>
         Don't create two different yet parallel experiences.</li>
@@ -310,7 +317,7 @@
   <h2 class="texty-title">Aspect Ratio</h2>
   <div class="texty-body">
     <ul>
-      <li class="slide">I used the <a href="https://github.com/Team-Sass/Singularity" target="_blank">Singularity extension for Sass</a> because it got out of my way.</li>
+      <li class="slide">I used the <a href="http://breakpoint-sass.com/" target="_blank">Breakpoint extension for Sass</a> because it got out of my way.</li>
       <li class="slide">Then combined <code>min-aspect-ratio</code> with <code>vh</code> units.</li>
       <li class="slide">In CSS, if you know something's height or width, you can define the other proportionally.</li>
     </ul>
